creacion de cruds modulo inventarios

--- a/web/WEB-INF/template/maqueta.xhtml
+++ b/web/WEB-INF/template/maqueta.xhtml
@@ -10,7 +10,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge"/>
 
         <title>SILEG | ADMIN</title>
-
+        <link href="../lib/boostrap/css/boostrap.min.css"></link>
         <!-- Font Awesome Icons -->
         <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css"/>
         <!-- Theme style -->
@@ -19,6 +19,7 @@
         <link
             href="https://fonts.googleapis.com/css2?family;=Roboto+Mono:ital,wght@0,500;0,700;1,700&family;=Roboto:wght@300&display;=swap"
             rel="stylesheet"></link>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     </h:head>
 
     <h:body class="hold-transition sidebar-mini">
